Enabled conditional rendering of frontend ui based on the users role

--- a/frontend/src/Settings/Users/AddUsers/EditAddUserModal/EditAddUserModalContent.css
+++ b/frontend/src/Settings/Users/AddUsers/EditAddUserModal/EditAddUserModalContent.css
@@ -10,7 +10,7 @@
 }
   
 .addSpecification {
-  composes: addUser from '../addUser.css';
+  composes: addUser from '../AddUser.css';
 
   background-color: var(--cardAlternateBackgroundColor);
   color: var(--gray);
