--- a/frontend/src/Settings/Profiles/Quality/QualityProfileItem.css
+++ b/frontend/src/Settings/Profiles/Quality/QualityProfileItem.css
@@ -54,7 +54,7 @@
 }
 
 .createGroupButton {
-  composes: buton from '~Components/Link/IconButton.css';
+  composes: button from '~Components/Link/IconButton.css';
 
   display: flex;
   align-items: center;
